--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="view<port" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
     <h1>Indra Murugesh</h1>
     <h2>I am an Assistant Professor</h2>
     <h3>https://github.com/IndrakumariRanganathan/Indrakumari.git</h3>
+    <h4>I am living in Greater Noida</h4>
     
 </body>
 </html>
